# newgamepp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cc  vcpkg.json
assets/: asphalt.json
src/: Archetypes.cc  Archetypes.hh  Architypes.cc  Architypes.hh  Components.hh  Constants.hh  DebugGUI.cc  DebugGUI.hh  Main.cc  SliderField.cc  SliderField.hh  Systems.hh  main.cc
src/gui/: AsepriteParser.cc  AsepriteParser.hh  DebugGUI.cc  DebugGUI.hh  DebugMenu.cc  DebugMenu.hh  DebugTileEditor.cc  DebugTileEditor.hh  EntityChooser.cc  EntityChooser.hh  EntityWindow.cc  EntityWindow.hh  GridModel.hh  GuiUnity.cc  IEnttModel.hh  IFileOpener.hh  IFileOperations.hh  IRenderable.hh  ITileParser.hh  NFDFileOpener.cc  NFDFileOpener.hh  TileModel.hh  TileSet.hh  TileWindow.cc  TileWindow.hh
src/gui/fields/: SliderField.cc  SliderField.hh  TextField.cc  TextField.hh
src/gui/tileEditor/: AsepriteParser.cc  AsepriteParser.hh  GridModel.hh  IEnttModel.hh  ITileParser.hh  ITileTool.hh  MultiSelectTool.cc  MultiSelectTool.hh  NullTileTool.hh  PainterTool.cc  PainterTool.hh  RemoveTool.cc  RemoveTool.hh  SelectedCollection.cc  SelectedCollection.hh  SelectionBoxModel.hh  TileMap.cc  TileMap.hh  TileModel.hh  TilePicker.cc  TilePicker.hh  TilePickerTool.cc  TilePickerTool.hh  TileSelector.cc  TileSelector.hh  TileSet.hh  TileSetSelector.cc  TileSetSelector.hh  TileWindow.cc  TileWindow.hh
